--- a/whack-a-window.vcxproj
+++ b/whack-a-window.vcxproj
@@ -76,7 +76,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
-    <OutDir>$(SolutionDir)\bin</OutDir>
+    <OutDir>$(SolutionDir)\bin\</OutDir>
     <IntDir>bin\$(Configuration)\</IntDir>
     <TargetName>$(ProjectName)_x64</TargetName>
     <GenerateManifest>false</GenerateManifest>
@@ -272,6 +272,9 @@
     <None Include="README.md" />
     <None Include="win\dlls_x86\FreeImage.dll" />
     <None Include="win\dlls_x86\SDL2.dll" />
+    <CopyFileToFolders Include="win\dlls_x86\SDL2_mixer.dll">
+      <FileType>Document</FileType>
+    </CopyFileToFolders>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="win\dlls_x64\dlls_x64.manifest" />
